<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/guideFragment"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".src.fragment.guide.GuideFragment">

    <ImageView
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/main_icon"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guidetext1"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"/>


    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guidetext2"
        android:textColor="@color/black"
        android:textSize="17sp"/>

    <TextView
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guidetext3"
        android:textColor="@color/black"
        android:textSize="17sp"/>




</LinearLayout>