<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".src.fragment.logged_out.join.register_step1.RegisterStep1Fragment">

    <ImageButton
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/register_step1_imgbtn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:background="@color/transparency"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        style="@style/BoldText"/>

    <EditText
        android:id="@+id/register_step1_edittext_id"
        android:background="@drawable/custom_edittext"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:paddingStart="15dp"
        android:paddingVertical="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/join_input_id"/>

    <EditText
        android:id="@+id/register_step1_password"
        android:background="@drawable/custom_edittext"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:paddingStart="15dp"
        android:paddingVertical="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/join_input_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/register_step1_btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_btn2"
        android:text="@string/next"
        android:textStyle="bold"
        android:textColor="@color/white"/>


</LinearLayout>