<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".src.fragment.logged_out.login.LoginFragment">

    <ImageButton
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:id="@+id/login_imgbtn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/back"
        android:background="@color/transparency"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        style="@style/BoldText"/>

    <EditText
        android:id="@+id/login_edittext_id"
        android:background="@drawable/custom_edittext"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:paddingStart="15dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:paddingVertical="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/id"/>

    <EditText
        android:id="@+id/login_edittext_password"
        android:background="@drawable/custom_edittext"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        android:paddingStart="15dp"
        android:paddingVertical="13dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_btn2"
        android:text="@string/login"
        android:textColor="@color/white"/>


</LinearLayout>