<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".src.fragment.chart.ChartFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/chart_imgbtn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/transparency"
        android:src="@drawable/back" />

        <TextView
            android:id="@+id/chart_textview_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="검사결과지"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="350dp"/>

    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ellipse"/>
       <TextView
           android:layout_marginHorizontal="10dp"
           android:layout_marginLeft="1dp"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:gravity="center_vertical"
           android:textSize="20sp"
           android:textStyle="bold"
           android:textColor="@color/black"
           android:text="@string/right"/>
        <ImageView
            android:layout_marginLeft="40dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/iconx"/>
        <TextView
            android:layout_marginHorizontal="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/left"/>

    </LinearLayout>

   <LinearLayout
       android:layout_marginTop="40dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <ImageView
           android:id="@+id/chart_imageview_angry"
           android:paddingLeft="10dp"
           android:layout_gravity="center_vertical"
           android:layout_width="27dp"
           android:layout_height="27dp"
           android:layout_weight="1"
           android:src="@drawable/angry1"/>
       <ImageView
           android:id="@+id/chart_imageview_sad"
          android:paddingLeft="18dp"
           android:layout_gravity="center_vertical"
           android:layout_width="30dp"
           android:layout_height="30dp"
           android:layout_weight="1"
           android:src="@drawable/sad1"/>
       <ImageView
           android:id="@+id/chart_imageview_neutral"
           android:paddingLeft="8dp"
           android:layout_gravity="center_vertical"
           android:layout_width="30dp"
           android:layout_height="30dp"
           android:layout_weight="1"
           android:src="@drawable/neutral1"/>
       <ImageView
           android:id="@+id/chart_imageview_smile"
           android:layout_gravity="center_vertical"
           android:layout_width="27dp"
           android:layout_height="27dp"
           android:layout_weight="1"
           android:src="@drawable/smile1"/>
   </LinearLayout>




    <FrameLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content">
           <View
               android:layout_gravity="center_vertical"
               android:layout_marginHorizontal="50dp"
               android:layout_width="match_parent"
               android:layout_height="2dp"
               android:background="@color/line"/>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/chart_textview_angry"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/angry"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_baseline_lens_24"
                />
            <TextView
                android:id="@+id/chart_textview_sad"
                android:textSize="10sp"
                android:textStyle="bold"
                android:text="@string/sad"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_baseline_lens_24" />
            <TextView
                android:id="@+id/chart_textview_neutural"
                android:textSize="10sp"
                android:text="@string/neutral"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_baseline_lens_24" />
            <TextView
                android:id="@+id/chart_textview_smile"
                android:textSize="10sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:gravity="center_horizontal"
                android:text="@string/smile"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/ic_baseline_lens_24" />

        </LinearLayout>

       </FrameLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text = "비슷한 연령대의 평균 청력(dB)"/>
        <TextView
            android:visibility="gone"
            android:gravity=""
            android:id="@+id/chart_text_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="40"
            android:layout_gravity="center_horizontal"
            style="@style/BoldText"/>


    </LinearLayout>



</LinearLayout>